# complex_numbers_calculator

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/complex_numbers_calculator/: calculator.py
src/complex_numbers_calculator/engines/: complex_number_engine.py  engines_factory.py  octonion_engine.py
src/complex_numbers_calculator/models/: __init__.py  complex_number.py  octonion.py
src/octonion_calculator/: __init__.py  calculator.py  octonion.py
src/octonion_calculator/engines/: __init__.py  base_engine.py  engines_factory.py  octonion_engine.py
src/octonion_calculator/models/: __init__.py
tests/: conftest.py  test_calculator.py  test_engine_factory.py  test_octonion.py
tests/unit/: test_engine_factory.py  test_octonion.py
