[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "complex_numbers_calculator"
version = "0.0.1"
description = "Complex numbers arithmetic library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Wolchear" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy >= 2.3.1",
    "pytest >= 8.4.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["complex_numbers_calculator*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]